Bug Fixes (cont.)
- Made blobs follow same paths
- Fixed issue with section SVG getting cut off by the next section

--- a/Client/Content/app.css
+++ b/Client/Content/app.css
@@ -883,6 +883,8 @@ svg{
   width: 100%;
   overflow: hidden;
   line-height: 0;
+  margin-bottom: 2%;
+  padding-bottom: 2%;
 }
 
 .custom-shape-divider-bottom-1709771436 svg {
